compiler/testData/diagnostics/tests/secondaryConstructors/kt6994.fir.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER
class X<T> {
    constructor(t: T, i: Int): <!INAPPLICABLE_CANDIDATE!>this<!>(i, 1)
}
